[package]
name = "img_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.3", features = ["multipart", "json"]}
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "0.8", features = ["v4"]}
async-trait = "0.1"
multipart = "0.17"
tokio-stream = "0.1"
env_logger = "0"
base64 = "0.13"